--- a/style.css
+++ b/style.css
@@ -432,30 +432,12 @@ id {
   grid-area: articulo;
 }
 
-
-
-/* flecha abajo */
-/* .flecha__abajo {
-  font-size: 16px;
-  position: absolute;
-  bottom: 100px;
-  cursor: pointer;
-  z-index: 999;
-}
-
-.flecha__abajo img {
-  filter: invert(1);
-  width: 20px;
-  margin: 5px auto;
-} */
-
-
-
 /* Pantalla dividida izquierda*/
 .dividida__left {
   scroll-margin-top: 0px;
   grid-area: divLeft;
-  height: 100%;
+  /* height: 100%; */
+  height: auto;
   background-image: url(img/nosotrosDos.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -539,7 +521,8 @@ id {
 
 .dividida__right {
   grid-area: divRight;
-  height: 100%;
+  /* height: 100%; */
+  height: auto;
   background-image: url(img/javier.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -748,8 +731,6 @@ id {
   position: relative;
   margin-top: 3em;
 }
-
-
 
 /* texto descontracturado */
 .t-stroke {
@@ -1279,10 +1260,10 @@ id {
   /* Absolute position */
   left: 0px;
   position: absolute;
-  top: 300px;
+  top: 250px;
 
   /* Take full size */
-  height: 100%;
+  height: 60%;
   width: 100%;
 
   /* Create diagonal sides */
