--- a/style.css
+++ b/style.css
@@ -328,10 +328,10 @@ id {
 .main {
   width: 100%;
   height: 600px;
-  background: url(img/main2.jpg);
+  background: url(img/main\ portada.png);
   background-size: cover;
-  background-repeat: repeat;
-  background-position-y: -1em;
+  background-repeat: no-repeat;
+  background-position-y: -3em;
   background-attachment: fixed;
 
   grid-area: main;
@@ -340,6 +340,7 @@ id {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  filter: contrast(100%);
 }
 
 .main::before {
@@ -1357,7 +1358,7 @@ id {
 }
 
 /* Cuarto */
-.cuarto{
+.cuarto {
   width: 100%;
   height: 200px;
   background: url('img/cuartodeoracion.jpg');
@@ -1365,19 +1366,21 @@ id {
   background-repeat: no-repeat;
   background-position-y: -200px;
   grid-area: cuarto;
+  filter: contrast(100%) brightness(100%);
 
 
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   position: relative;
 }
 
-.cuarto::before{
+.cuarto::before {
   content: "";
   width: 100%;
   height: 200px;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, .7);
   position: absolute;
   top: 0;
   left: 0;
@@ -1385,22 +1388,31 @@ id {
   bottom: 0;
 }
 
-.cuarto__titulo{
+.cuarto__titulo {
   color: white;
   font-size: 40px;
   font-weight: 600;
   text-align: center;
   margin: 0 auto;
   z-index: 1;
+
+}
+
+.cuarto__parrafo {
+  color: white;
+  font-size: 14px;
+  text-align: center;
+  margin: 10px auto;
+  z-index: 1;
 }
 
 .cuarto__btn {
   width: 100px;
   z-index: 1;
-  background-color: var(--color-uno);
+  background-color: var(--color-tres);
   border-radius: 8px;
   padding: 8px;
-  margin: 10px auto;
+  margin: 0 auto;
   cursor: pointer;
 }
 
@@ -1416,7 +1428,8 @@ id {
 .cuarto__btn:hover {
   border: none;
   cursor: pointer;
-  background-color: var(--color-tres);
+  background-color: var(--color-uno);
+
 }
 
 /* Testimonios */
