--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -419,20 +419,34 @@
 
     /* Cuarto */
     .cuarto {
-        flex-direction: column;
-        background-position-y: -100px;
+        height: 200px;
+        padding: 10px;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .cuarto::before {
+        height: 200px;
+    }
+
+    .cuarto i {
+        font-size: 30px;
+        margin: 0;
     }
 
     .cuarto__titulo {
-        font-size: 2em;
-        margin-top: 1em;
+        margin: 0;
     }
-    .cuarto__parrafo{
+
+    .cuarto__parrafo {
+        width: 90%;
         font-size: 10px;
+        line-height: normal;
+        margin: 0;
     }
 
     .cuarto__btn {
-        margin-top: 0;
+        margin: 0px;
     }
 
 }
@@ -1608,19 +1622,35 @@
         z-index: -1;
     }
 
-    .cuarto{
+    .cuarto {
+        height: 200px;
         padding: 10px;
+        align-items: center;
+        justify-content: space-evenly;
     }
-    .cuarto__titulo{
+
+    .cuarto::before {
+        height: 200px;
+    }
+
+    .cuarto i {
+        font-size: 30px;
         margin: 0;
     }
-    .cuarto__parrafo{
+
+    .cuarto__titulo {
+        margin: 0;
+    }
+
+    .cuarto__parrafo {
         width: 90%;
         font-size: 10px;
         line-height: normal;
+        margin: 0;
     }
-    .cuarto__btn{
-        margin: 10px;
+
+    .cuarto__btn {
+        margin: 0px;
     }
 }
 
