--- a/style.css
+++ b/style.css
@@ -1360,7 +1360,7 @@ id {
 /* Cuarto */
 .cuarto {
   width: 100%;
-  height: 200px;
+  height: 400px;
   background: url('img/cuartodeoracion.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -1379,7 +1379,7 @@ id {
 .cuarto::before {
   content: "";
   width: 100%;
-  height: 200px;
+  height: 400px;
   background: rgba(0, 0, 0, .7);
   position: absolute;
   top: 0;
@@ -1388,12 +1388,19 @@ id {
   bottom: 0;
 }
 
+.cuarto i{
+  font-size: 100px;
+  margin: 20px;
+  color: white;
+  z-index: 1;
+}
+
 .cuarto__titulo {
   color: white;
-  font-size: 40px;
+  font-size: 60px;
   font-weight: 600;
   text-align: center;
-  margin: 0 auto;
+  margin: 10px auto;
   z-index: 1;
 
 }
@@ -1401,8 +1408,9 @@ id {
 .cuarto__parrafo {
   color: white;
   font-size: 14px;
+  font-weight: 100;
   text-align: center;
-  margin: 10px auto;
+  margin: 20px auto;
   z-index: 1;
 }
 
