--- a/cuarto.css
+++ b/cuarto.css
@@ -28,19 +28,20 @@ section[id] {
 /*Contenedor general (grilla layaut)*/
 .contenedor {
     width: 95vw;
+    height: 100%;
     max-width: 65em;
 
     margin: 1.2em auto;
     grid-gap: .5em;
     display: grid;
 
+
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, auto);
+    grid-template-rows: repeat(3, auto);
     grid-template-areas:
-        'nav       nav       nav'
-        'cuarto    cuarto    cuarto'
-        'swiper    swiper    swiper'
-        'footer    footer    footer';
+        'nav            nav             nav'
+        'cuartos        cuartos         cuartos'
+        'footer         footer          footer';
 }
 
 /*barra de navegacion*/
@@ -133,16 +134,17 @@ section[id] {
 .cuarto__contenedor {
     width: 100%;
     height: 100vh;
-    grid-area: cuarto;
+    grid-area: cuartos;
     background: url(img/cuartodeoracion.jpg);
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
     padding: 0;
     position: relative;
+
 }
+
 .cuarto__contenedor::before {
     width: 100%;
     height: 100vh;
@@ -150,11 +152,10 @@ section[id] {
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
+
     background-color: rgba(0, 0, 0, .8);
     z-index: 0;
-  }
+}
 
 .cuarto__texto {
     width: 100%;
@@ -164,175 +165,31 @@ section[id] {
     flex-direction: column;
     z-index: 1;
 }
-.cuarto__titulo{
+
+.cuarto__texto i {
+    font-size: 60px;
+    margin: 50px;
+    color: white;
+}
+
+.cuarto__titulo {
     font-size: 80px;
     font-weight: 600;
     color: white;
     text-align: center;
     line-height: 80px;
 }
-.cuarto__subtitulo{
+
+.cuarto__subtitulo {
     font-size: 40px;
     color: white;
     margin: 40px;
 }
-.cuarto__parrafo{
+
+.cuarto__parrafo {
     color: white;
     font-size: 18px;
 }
-
-
-/* Testimonios */
-.container__diagonal {
-    /* Absolute position */
-    left: 0px;
-    position: absolute;
-    top: 250px;
-
-    /* Take full size */
-    height: 60%;
-    width: 100%;
-
-    /* Create diagonal sides */
-    transform: skewY(-5deg);
-
-    /* Background color */
-    background: linear-gradient(90deg, #f1f1f1, #d5d5d5);
-
-    /* Displayed under the main content */
-    z-index: -1;
-}
-
-.swiper {
-    scroll-margin-top: 0px;
-    width: 100%;
-    height: 100vh;
-    grid-area: swiper;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    color: white;
-}
-
-.swiper-slide {
-    width: 100%;
-    height: 100vh;
-    text-align: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    overflow: hidden;
-
-}
-
-.swiper-texto {
-    width: 80%;
-    height: 70vh;
-    background: whitesmoke;
-    box-shadow: rgba(0, 0, 0, 0.55) 0px 5px 15px;
-    text-align: center;
-    color: black;
-    font-size: 18px;
-    text-align: center;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    line-height: 22px;
-    overflow: hidden;
-}
-
-.swiper-texto h2 {
-    font-size: 45px;
-    padding: 30px;
-    font-weight: 600;
-    margin-top: 65px;
-    color: black;
-}
-
-.swiper-texto h3 {
-    font-size: 15px;
-}
-
-.swiper-texto p {
-    width: 90%;
-    margin: 0 auto;
-    font-size: 30px;
-    line-height: 30px;
-    margin-top: 16px;
-    text-align: justify;
-    font-family: 'Cardo', serif;
-}
-
-.swiper-fondoImg {
-    width: 100%;
-    height: 25%;
-    margin: 0;
-    padding: 0;
-    position: relative;
-
-    background: linear-gradient(270deg, #0b2e41, #20bfc8, #2248e3);
-    background-size: 600% 600%;
-
-    -webkit-animation: AnimationName 18s ease infinite;
-    -moz-animation: AnimationName 18s ease infinite;
-    animation: AnimationName 18s ease infinite;
-
-
-    @-webkit-keyframes AnimationName {
-        0% {
-            background-position: 19% 0%
-        }
-
-        50% {
-            background-position: 82% 100%
-        }
-
-        100% {
-            background-position: 19% 0%
-        }
-    }
-
-    @-moz-keyframes AnimationName {
-        0% {
-            background-position: 19% 0%
-        }
-
-        50% {
-            background-position: 82% 100%
-        }
-
-        100% {
-            background-position: 19% 0%
-        }
-    }
-
-    @keyframes AnimationName {
-        0% {
-            background-position: 19% 0%
-        }
-
-        50% {
-            background-position: 82% 100%
-        }
-
-        100% {
-            background-position: 19% 0%
-        }
-    }
-
-
-}
-
-
 
 
 
@@ -343,6 +200,7 @@ section[id] {
     background-color: var(--color-cinco);
     grid-area: footer;
     overflow: hidden;
+
 }
 
 /* grupo 2 */
@@ -362,56 +220,51 @@ section[id] {
 }
 
 
-/* `sm` applies to x-small devices (portrait phones, less than 576px)*/
-@media only screen and (max-width: 580px) {
 
-    /*Contenedor general (grilla layaut)*/
-    .contenedor {
-        width: 95vw;
-        margin: 0em auto;
-        grid-gap: 0em;
-        display: grid;
+/* Samsung Galaxy A20 (Sebastian) */
+@media only screen and (max-width: 425px) {
 
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, auto);
-        grid-template-areas:
-            'nav'
-            'aside'
-            'footer';
+    .navbar__logo{
+        margin-left: 20px;
+    }
+    .navbar__item{
+        margin-right: 20px;
     }
 
-    .navbar__link:hover {
-        transform: scale(1.2);
+    .cuarto__contenedor{
+        height: 100%;
+        background-size: 1400px;
+        background-position: top;
+    }
+    .cuarto__contenedor::before{
+        height: 100%;
+    }
+    .cuarto__titulo {
+        font-size: 50px;
+        line-height: 40px;
+    }
+    .cuarto__texto i{
+        font-size: 50px;
+    }
+    .cuarto__subtitulo{
+        font-size: 20px;
+        margin-top: 20px;
+    }
+    .cuarto__parrafo{
+        font-size: 12px;
+        padding: 20px;
+        margin-bottom: 30px;
+        text-align: center;
+        line-height: normal;
     }
 
-    .aside__titulo3--reuniones {
-        font-size: 40px;
-        font-family: 'Montserrat', sans-serif;
-        margin: 15px auto;
-        letter-spacing: 8px;
-        line-height: 45px;
-    }
-
-    .aside__subtitulo3--reuniones {
+    .footer__grupo2{
         font-size: 15px;
-        margin-top: 10px;
-        letter-spacing: 8px;
     }
 
 
-    .aside__iframe--reuniones {
-        width: 90%;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        z-index: 1;
-    }
 
-    .aside__iframe--reuniones iframe {
-        width: 500px;
-        height: 220px;
-        margin: 4em auto;
-    }
+
+
 
 }
