--- a/style.css
+++ b/style.css
@@ -939,6 +939,7 @@ summary {
 }
 
 .aside__titulo {
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
   font-size: 40px;
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 0px;
@@ -1408,9 +1409,11 @@ summary {
 .ministerios {
   width: 100%;
   height: 500px;
-  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAICAYAAADA+m62AAAAPklEQVQYV2NkwAT/gUKM6MLoAjBFGIqRFaJLovBhCrFaB7QeLg5SiEsRzJlgeQxHY/EcSOg/sQoxgwGHiQwA+f4KCL3Y/AQAAAAASUVORK5CYII=) repeat;
+  background: url(img/banner_header.png);
+  background-size: cover;
+  background-repeat: no-repeat;
   grid-area: ministerios;
-  filter: contrast(100%) brightness(100%);
+  filter: contrast(100%) brightness(80%);
 
 
   display: flex;
@@ -1424,7 +1427,7 @@ summary {
   content: "";
   width: 100%;
   height: 500px;
-  background: rgba(255, 255, 255, .9);
+  background: rgba(0, 0, 0, .7);
   position: absolute;
   top: 0;
   left: 0;
@@ -1435,14 +1438,15 @@ summary {
 .ministerios i {
   font-size: 35px;
   margin: 20px;
-  color: black;
+  color: white;
   z-index: 1;
 }
 
 .ministerios__titulo {
-  color: black;
+  color: white;
   font-size: 60px;
   font-weight: 600;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
   text-align: center;
   margin: 10px auto;
   z-index: 1;
@@ -1450,7 +1454,8 @@ summary {
 }
 
 .ministerios__parrafo {
-  color: black;
+  width: 80%;
+  color: white;
   font-size: 18px;
   font-weight: 400;
   text-align: center;
@@ -1459,7 +1464,7 @@ summary {
 }
 
 .ministerios__btn {
-  width: 100px;
+  width: 130px;
   z-index: 1;
   background-color: var(--color-tres);
   border-radius: 8px;
