--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -1655,7 +1655,7 @@
     /* ministerios */
     .ministerios {
         background-size: 600px;
-        background-position: top;
+        background-size: cover;
         height: 300px;
         padding: 10px;
         align-items: center;
