--- a/style.css
+++ b/style.css
@@ -869,7 +869,7 @@ summary {
 /* texto descontracturado */
 .t-stroke {
   position: absolute;
-  top: 70%;
+  top: 72%;
   left: 0;
   right: 0;
   margin: auto;
@@ -1110,6 +1110,7 @@ summary {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   line-height: 50px;
+  z-index: 9;
 
 }
 
@@ -1118,6 +1119,7 @@ summary {
   font-weight: 400;
   margin-top: 5px;
 }
+
 
 
 /*iglesia */
@@ -1427,19 +1429,20 @@ summary {
   content: "";
   width: 100%;
   height: 500px;
-  background: rgba(0, 0, 0, .7);
+  background: #3498dba1;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-}
 
-.ministerios i {
-  font-size: 35px;
-  margin: 20px;
-  color: white;
-  z-index: 1;
+  background: #360033;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #0b8793, #360033);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #0b8893c5, #360033);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */;
+  background-attachment: fixed;
 }
 
 .ministerios__titulo {
@@ -1480,6 +1483,7 @@ summary {
   border: none;
   cursor: pointer;
   color: white;
+  z-index: 1;
 }
 
 .ministerios__btn:hover {
