--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -558,7 +558,7 @@
             'aside     aside     aside '
             'section   section   section'
             'ministerios   ministerios   ministerios'
-            'cuarto   cuarto   cuarto'
+            'cuarto     cuarto    cuarto'
             'testimonios testimonios testimonios'
             'galeria    galeria  galeria'
             'form      form      form'
@@ -1045,27 +1045,6 @@
         line-height: normal;
     }
 
-    /* Cuarto */
-    .cuarto {
-        height: 150px;
-        flex-direction: column;
-        background-position-y: 0px;
-    }
-
-    .cuarto::before {
-        height: 150px;
-    }
-
-    .cuarto__titulo {
-        font-size: 1em;
-        margin-top: .5em;
-    }
-
-    .cuarto__btn {
-        margin-top: .5em;
-    }
-
-
 
     /* testimonios */
     .swiper-texto {
@@ -1530,7 +1509,58 @@
         margin: 20px 0;
     }
 
+    /* Ministerios */
+    .ministerios{
+        height: auto;
+    }
+    .ministeriosCard{
+        width: 95%;
+       
+    }
+    .ministeriosCard__imagen{
+        width: 40%;
+    }
+    .ministeriosCard__texto{
+        width: 90%;
+        padding: 10px;
+    }
+    .ministeriosCard__parrafo{
+        font-size: 12px;
+        line-height: 15px;
+        text-align: justify;
+    }
+
+
+    /* Cuarto */
+    .cuarto{
+        height: auto;
+        padding: 0;
+    }
+    .cuartoCard{
+        width: 95%;
+    }
+    .cuartoCard__imagen{
+        width: 40%;
+    }
+    .cuartoCard__texto{
+        width: 90%;
+        padding: 10px;
+    }
+    .cuartoCard__tituloPre{
+        font-size: 15px;
+    }
+    .cuartoCard__titulo{
+        font-size: 20px;
+        line-height: 22px;
+    }
+    .cuartoCard__parrafo{
+        font-size: 12px;
+        line-height: 15px;
+        text-align: justify;
+    }
   
+
+
 
 
     /* testimonios */
@@ -1652,76 +1682,7 @@
         z-index: -1;
     }
 
-    /* ministerios */
-    .ministerios {
-        background-size: 600px;
-        background-size: cover;
-        height: 250px;
-        padding: 10px;
-        align-items: center;
-        justify-content: space-evenly;
-        border-radius: 18px;
-        box-shadow: rgba(0, 0, 0, 0.55) 0px 5px 15px;
-    }
 
-    .ministerios::before {
-        height: 250px;
-        border-radius: 18px;
-    }
-
-    .ministerios__titulo {
-        font-size: 50px;
-        margin: 0;
-    }
-
-    .ministerios__parrafo {
-        width: 90%;
-        font-size: 10px;
-        line-height: normal;
-        margin: 0;
-    }
-
-    .ministerios__btn {
-        margin: 0px;
-    }
-
-    /* Cuarto */
-    .cuarto {
-        background-size: 600px;
-        background-position: top;
-        height: 300px;
-        padding: 10px;
-        align-items: center;
-        justify-content: space-evenly;
-        border-radius: 18px;
-        box-shadow: rgba(0, 0, 0, 0.55) 0px 5px 15px;
-    }
-
-    .cuarto::before {
-        height: 300px;
-        border-radius: 18px;
-    }
-
-    .cuarto i {
-        font-size: 35px;
-        margin: 0;
-    }
-
-    .cuarto__titulo {
-        font-size: 35px;
-        margin: 0px;
-    }
-
-    .cuarto__parrafo {
-        width: 90%;
-        font-size: 10px;
-        line-height: normal;
-        margin: 0;
-    }
-
-    .cuarto__btn {
-        margin: 0px;
-    }
 }
 
 
